force-app/main/default/objects/HI_Carrier_Information__c/fields/Authorized_Date__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Date__c</fullName>
    <label>Authorized Date</label>
    <type>DateTime</type>
</CustomField>