force-app/main/default/objects/HI_Carrier_Information__c/fields/BOR_Transfer_Id__c.field-meta.xml
<CustomField>
    <fullName>BOR_Transfer_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>BOR Transfer Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>