force-app/main/default/objects/HI_Carrier_Information__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <label>HI Carrier Information Created</label>
    <type>DateTime</type>
</CustomField>