force-app/main/default/objects/HI_Carrier_Information__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>HI Carrier Information Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>