force-app/main/default/objects/HI_Carrier_Information__c/fields/Old_Deleted_At__c.field-meta.xml
<CustomField>
    <fullName>Old_Deleted_At__c</fullName>
    <description>This will store the value of Deleted At field before being updated.</description>
    <label>Old Deleted At</label>
    <type>DateTime</type>
</CustomField>