force-app/main/default/objects/HI_Carrier_Information__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>