force-app/main/default/objects/HI_Carrier_Information__c/fields/Secondary_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Policy_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>